test/libyul/yulSyntaxTests/functional_partial.yul
{
    let x := byte
}
// ----
// ParserError 7104: (20-21): Builtin function "byte" must be called.
